# cpp-plugin-app-template

./: CMakeLists.txt  README.md
resources/: resources.qrc
resources/qss/: style.qss
src/: CMakeLists.txt  main.cpp
src/app/: CMakeLists.txt
src/app/core/: CMakeLists.txt
src/app/core/include/JApp/Core/Context/: Context.h  ManagedObject.h  ObjectManager.h
src/app/core/include/JApp/Core/Gui/: LogLevelDelegate.h  LogViewer.h
src/app/core/include/JApp/Core/Managers/: ManagedObject.h  ObjectManager.h
src/app/core/include/JApp/Core/Models/: FakeLogModel.h  FileWatcherLogModel.h  LogModel.h  LoggerWatcherLogModel.h
src/app/core/src/JApp/Core/: Context.cpp
src/app/core/src/JApp/Core/Context/: Context.cpp  ObjectManager.cpp
src/app/core/src/JApp/Core/Gui/: LogLevelDelegate.cpp  LogViewer.cpp
src/app/core/src/JApp/Core/Models/: FakeLogModel.cpp  FileWatcherLogModel.cpp  LogModel.cpp  LoggerWatcherLogModel.cpp
src/app/logging/include/JApp/: Log.h  LogDefinitions.h  LogFormatter.h  Logger.h
src/app/logging/src/: Logger.cpp
src/app/plugins/: CMakeLists.txt  IPlugin.h
src/app/plugins/include/JApp/Plugins/: LoadPluginsTask.h  LoadTask.h  Plugin.h  PluginManager.h
src/app/plugins/src/JApp/Plugins/: LoadPluginsTask.cpp  LoadTask.cpp  PluginManager.cpp
src/app/startup/: CMakeLists.txt
src/app/startup/include/JApp/Plugins/: PluginsInitializer.h
src/app/startup/include/JApp/Startup/: Launcher.h  SplashScreen.h
src/app/startup/src/JApp/Plugins/: PluginManager.cpp  PluginsInitializer.cpp
src/app/startup/src/JApp/Startup/: Launcher.cpp  SplashScreen.cpp
src/plugins/: CMakeLists.txt
src/plugins/bar/: BarPlugin.cpp  BarPlugin.h  CMakeLists.txt
src/plugins/baz/: BazPlugin.cpp  BazPlugin.h  CMakeLists.txt
src/plugins/foo/: CMakeLists.txt  FooPlugin.cpp  FooPlugin.h
src/plugins/qux/: CMakeLists.txt  QuxPlugin.cpp  QuxPlugin.h
